# datels

./: README.md  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
datels/: __main__.py  datels.py
tests/: test_datels.py
tests/data/: expected_20001230_20220102.txt  expected_20210101_20210102.txt  expected_20210101_20210102_sep.txt  expected_20210101_20210105.txt  expected_20210101_20210105_left.txt  expected_20210101_20210105_right.txt  expected_20211230_20220102.txt
