[tool.poetry]
name = "datels"
version = "0.3.0"
description = "`datels` is a simple CLI that displays a list of dates line by line."
authors = ["joe-yama <s1r0mqme@gmail.com>"]
license = "MIT"
repository = 'https://github.com/joe-yama/datels'
readme = "README.md"

[tool.poetry.scripts]
datels = "datels.__main__:main"

[tool.poetry.dependencies]
python = ">=3.7"
fire = "^0.4.0"
numpy = ">=1.21"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
